1. 完成功能：写入信件 2. 待完成功能：查询table中的个人信件以及公共信件

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mysten/dapp-kit": "^0.16.2",
     "@mysten/sui": "^1.29.0",
     "@radix-ui/react-alert-dialog": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.11",
